@@ -1,3 +1,7 @@
+2001-06-12  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Core.pm (orac_start_algorithm_engines): s/algorithim/algorithm/g
+
 2001-06-04  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Calib/SCUBA.pm: Allow for different FCFs with different times
